# Argenta

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.de.md  README.md  README.ru.md  README2.md  SECURITY.md  justfile  pyproject.toml  setup.py  translator.py
.github/workflows/: mypy.yml  ruff.yml  tests.yml
argenta/: __init__.py
argenta/app/: __init__.py  defaults.py  entity.py  exceptions.py  models.py
argenta/command/: __init__.py  entity.py  exceptions.py  models.py
argenta/input_command/: entity.py
argenta/orchestrator/: entity.py
argenta/router/: __init__.py  defaults.py  entity.py  exceptions.py  models.py
changelog.d/: 20260312_154519_kolo.is.main_cli.md
docs/: .gitignore  Makefile  conf.py  contributing.rst  dependency_injection.rst  index.rst  justfile  quickstart.rst  redirect_stdout.rst  requirements.txt
docs/api/: Response.rst  index.rst
docs/code_snippets/: argparser_snippet.py  argspace_snippet.py  argspace_snippet2.py  argspace_snippet3.py  command_snippet3.py  dependency_injection_example_sample.py  dependency_injection_example_sample2.py  dependency_injection_example_sample4.py  dependency_injection_snippet4.py  dividing_lines_snippet.py  error_handling_example_sample5.py  error_handling_example_sample6.py  error_handling_snippet.py  error_handling_snippet2.py  error_handling_snippet4.py  flag_snippet.py  flag_snippet4.py  flag_snippet5.py  flags_snippet2.py  flags_snippet5.py  input_flag_snippet1.py  input_flag_snippet2.py  input_flag_snippet3.py  input_flag_snippet4.py  input_flag_snippet5.py  overriding_format_example_sample.py  possible_values_neither_snippet.py  predefined_flags_snippet.py  quickstart_example_main.py  quickstart_example_routers.py  redirect_stdout_example_sample.py  redirect_stdout_example_sample2.py  router_snippet.py  validation_status_comprehensive_snippet6.py  validation_status_input_flag_snippet4.py  validation_status_invalid_snippet2.py
docs/root/: code_of_conduct.rst  contributing.rst  dependency_injection.rst  error_handling.rst  flags.rst  index.rst  metrics.rst  overriding_formatting.rst  quickstart.rst  redirect_stdout.rst  testing.rst
imgs/: desktop.ini
metrics/: __init__.py  __main__.py  handlers.py  registry.py  utils.py
metrics/benchmarks/: __init__.py  entity.py  finds_appropriate_handler.py  flag_validation.py  input_command_parse.py  models.py  most_similar_command.py  pre_cycle_setup.py  utils.py  validate_routers_for_collisions.py
metrics/services/: __init__.py  diagram_generator.py  release_generator.py  report_generator.py  report_table_generator.py  system_info_reader.py
metrics_tests/: get_time_of_pre_cycle_setup.py  get_time_of_pre_cycle_with_10k_commads.py  time_of_precycle_setup.py
mock/: .history  local_test.py  test.py
mock/default_mock_app/: main.py
mock/min_app/: main.py  routers.py
mock/mock_app/: main.py  routers.py
source/: conf.py  index.rst
src/argenta/: __init__.py
tests/: main_test.py  test.py  test_app.py  test_command.py  test_flag.py  test_flagsgroup.py  test_router.py
tests/mock_app/: main.py
tests/mock_default_app/: main.py
tests/system_tests/: test_system.py  test_system_handler_normal_work.py  test_system_handling_non_standard_behavior.py  test_system_handling_normal_behavior.py
tests/unit_tests/: test_app.py  (+13 more)
(+372 files in other folders)
